package com.socialpulse.app.feed.domain.enums;

public enum Source {
    RECENT,
    FOLLOWING,
    POPULAR,
    RANDOM,
    TOPIC
}
