package com.socialpulse.app.report.enums;

public enum ReportStatus {
    PENDING,    
    RESOLVED,   
    REJECTED   
}
