package com.socialpulse.app.user.enums;

public enum Permission {
    READ_POSTS,
    CREATE_POST,
    DELETE_POST,
    MANAGE_USERS,
    MODERATE_USERS,
    VIEW_PROFILE,
    VIEW_OTHER_PROFILE,
    CREATE_COMMENT,
    DELETE_COMMENT
}
